Fix box-sizing property and refactor CSS for improved organization and readability

--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -115,7 +115,7 @@ textarea {
 }
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box;
+  box-sizing: border-g;
   padding: 0;
 }
 [type="number"]::-webkit-inner-spin-button,
@@ -146,19 +146,6 @@ template {
   display: none;
 }
 /*# sourceMappingURL=normalize.min.css.map */
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-/* Add smooth scrolling to the page */
-html {
-  scroll-behavior: smooth;
-  font-size: 62.5%;
-}
-
-/* define document color properties and set font properties*/
 :root {
   --color-primary: #d73953;
   --color-black: #090909;
@@ -167,9 +154,8 @@ html {
   --color-dark-grey: #353535;
   --text-color: var(--color-black);
   --font-family-base:
-    "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  --font-family-title:
-    "Raleway", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
   --font-size-small: 1.2rem;
   --font-size-medium: 1.6rem;
   --font-size-large: 1.8rem;
@@ -199,108 +185,15 @@ html {
   --nav-item-link-hover: var(--color-primary);
   --section-tagline-margin: 0;
 }
-
-/* Setup page properties */
-body,
-a {
-  color: var(--text-color);
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
-body {
-  font-family: var(--font-family-base);
-  font-size: var(--font-size-medium);
-  font-weight: var(--font-weight-regular);
-  line-height: var(--line-height-base);
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
 }
-.visually-hidden {
-  display: none;
-}
-.section {
-  padding: var(--section-padding);
-}
-.section-header {
-  text-align: var(--section-header-align);
-  padding: var(--section-header-padding);
-}
-.section-body {
-  padding: var(--section-body-padding);
-}
-.section-footer {
-  padding: var(--section-footer-padding);
-  text-align: var(--section-footer-align);
-}
-.card-category,
-.section-tagline {
-  color: var(--color-primary);
-}
-.section-title {
-  font-family: var(--font-family-title);
-  font-size: var(--font-size-xx-large);
-  font-weight: var(--font-weight-bold);
-  margin: var(--section-title-margin);
-  color: var(--section-title-color);
-}
-.section-tagline {
-  text-transform: var(--section-tagline-transform);
-  font-weight: var(--font-weight-bold);
-  font-family: var(--font-family-title);
-  margin: var(--section-tagline-margin);
-}
-.container {
-  width: 960px;
-  margin-right: auto;
-  margin-left: auto;
-  ul.row {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.col-1-3 {
-  width: 33.33%;
-  float: left;
-  padding: 0.5rem;
-}
-.col-1-2 {
-  width: 50%;
-  float: left;
-  padding: 0.5rem;
-}
-.footer-copyright {
-  margin: 0;
-  font-size: var(--font-size-small);
-  color: var(--text-color);
-}
-.footer ul {
-  text-align: right;
-}
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--font-family-title);
-  font-weight: var(--font-weight-bold);
-}
-
-/* Style links */
-a:link {
-  text-decoration: none;
-}
-a:visited {
-  font-style: italic;
-}
-a:hover {
-  text-decoration: underline;
-}
-a:active {
-  background-color: var(--color-light-grey);
-}
-.footer {
-  padding: var(--footer-padding);
-}
-
-/* Navbar styles */
 .navbar-menu {
   float: right;
 }
@@ -324,4 +217,98 @@ a:active {
 }
 .nav .nav-link:hover {
   color: var(--nav-item-link-hover);
+}
+ul.row {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.col-1-3 {
+  width: 33.33%;
+  float: left;
+  padding: 0.5rem;
+}
+.col-1-2 {
+  width: 50%;
+  float: left;
+  padding: 0.5rem;
+}
+.footer-copyright {
+  margin: 0;
+  font-size: var(--font-size-small);
+  color: var(--text-color);
+}
+.footer ul {
+  text-align: right;
+}
+body {
+  color: var(--text-color);
+  font-family: var(--font-family-base);
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-regular);
+  line-height: var(--line-height-base);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-family-title);
+  font-weight: var(--font-weight-bold);
+}
+a:link {
+  color: var(--text-color);
+  text-decoration: none;
+}
+a:visited {
+  font-style: italic;
+}
+a:hover {
+  text-decoration: underline;
+}
+a:active {
+  background-color: var(--color-light-grey);
+}
+.visually-hidden {
+  display: none;
+}
+.card-category {
+  color: var(--color-primary);
+}
+.section {
+  padding: var(--section-padding);
+}
+.section-header {
+  text-align: var(--section-header-align);
+  padding: var(--section-header-padding);
+}
+.section-body {
+  padding: var(--section-body-padding);
+}
+.section-footer {
+  padding: var(--section-footer-padding);
+  text-align: var(--section-footer-align);
+}
+.section-title {
+  font-family: var(--font-family-title);
+  font-size: var(--font-size-xx-large);
+  font-weight: var(--font-weight-bold);
+  margin: var(--section-title-margin);
+  color: var(--section-title-color);
+}
+.section-tagline {
+  color: var(--color-primary);
+  font-family: var(--font-family-title);
+  text-transform: var(--section-tagline-transform);
+  font-weight: var(--font-weight-bold);
+  margin: var(--section-tagline-margin);
+}
+.container {
+  width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer {
+  padding: var(--footer-padding);
 }
